# Ember

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  EMBER.md  IMPROVEMENTS.md  README.md  codecov.yml  deny.toml
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  security-audit.yml
crates/ember-benchmarks/: Cargo.toml
crates/ember-benchmarks/benches/: full_suite.rs  tools_benchmarks.rs
crates/ember-browser/src/: browser.rs  error.rs  tool.rs
crates/ember-cli/: Cargo.toml
crates/ember-cli/src/: auto_context.rs  config.rs  error_display.rs  main.rs  memory.rs  onboarding.rs
crates/ember-cli/src/commands/: bench.rs  chat.rs  code.rs  completions.rs  config.rs  context_builder.rs  display.rs  export.rs  git.rs  history.rs  mod.rs  plugin.rs  provider_factory.rs  providers.rs  risk.rs  serve.rs  session.rs  slash.rs  terminal.rs
crates/ember-cli/src/tui/: app.rs  mod.rs  renderer.rs  ui.rs
crates/ember-cli/tests/: snapshot_tests.rs
crates/ember-cli/tests/snapshots/: snapshot_tests__assistant_message.snap  snapshot_tests__bash_completions.snap  snapshot_tests__chat_format_json.snap  snapshot_tests__chat_format_markdown.snap  snapshot_tests__config_display.snap  snapshot_tests__config_display_minimal.snap  snapshot_tests__config_show_json.snap  snapshot_tests__conversation_export.snap  snapshot_tests__error_api_key.snap  snapshot_tests__error_network.snap  snapshot_tests__error_rate_limit.snap  snapshot_tests__help_output.snap  snapshot_tests__history_table.snap  snapshot_tests__json_output_message.snap  snapshot_tests__model_info_claude.snap  snapshot_tests__model_info_gpt4.snap  snapshot_tests__model_info_ollama.snap  snapshot_tests__plugins_table.snap  snapshot_tests__status_complete.snap  snapshot_tests__status_connecting.snap  snapshot_tests__status_streaming.snap  snapshot_tests__system_message.snap  snapshot_tests__tui_layout_main.snap  snapshot_tests__tui_layout_settings.snap  snapshot_tests__user_message.snap  snapshot_tests__version_output.snap
crates/ember-code/: Cargo.toml
crates/ember-code/src/: analyzer.rs  lib.rs  refactor.rs  testgen.rs
crates/ember-core/: Cargo.toml
crates/ember-core/src/: agent.rs  bootstrap.rs  cache.rs  checkpoint.rs  collaboration.rs  compaction.rs  config.rs  config_merge.rs  context.rs  context_manager.rs  conversation.rs  cost_predictor.rs  error.rs  knowledge_graph.rs  lib.rs  memory.rs  memory_optimization.rs  oauth.rs  orchestrator.rs  performance.rs  permissions.rs  planning.rs  privacy.rs  runtime.rs  sandbox.rs  security.rs  self_healing.rs  session_fork.rs  streaming.rs  system_prompt.rs  task_planner.rs  thinking.rs  tool_executor.rs  tool_selector.rs  usage_tracker.rs
crates/ember-core/tests/: proptest_tests.rs
crates/ember-desktop/src/: main.rs
crates/ember-enterprise/: Cargo.toml
crates/ember-enterprise/src/: audit.rs  auth.rs  lib.rs  rbac.rs  teams.rs
crates/ember-i18n/locales/: ar.json  it.json  ko.json  pt-BR.json  ru.json
crates/ember-i18n/src/: lib.rs
crates/ember-learn/: Cargo.toml
crates/ember-learn/src/: lib.rs  patterns.rs  preferences.rs  profile.rs  suggestions.rs
crates/ember-llm/: Cargo.toml
crates/ember-llm/benches/: llm_benchmark.rs
crates/ember-llm/src/: analyzer.rs  anthropic.rs  bedrock.rs  connection_pool.rs  deepseek.rs  error.rs  function_calling.rs  gemini.rs  groq.rs  lib.rs  mistral.rs  mock.rs  model_registry.rs  ollama.rs  openai.rs  openrouter.rs  provider.rs  retry.rs  router.rs  scorer.rs  streaming.rs  types.rs  vision.rs  xai.rs
crates/ember-mcp/: Cargo.toml
crates/ember-mcp/src/: client.rs  error.rs  lib.rs  server.rs  types.rs
crates/ember-plugins/: Cargo.toml
crates/ember-plugins/src/: error.rs  hooks.rs  hot_reload.rs  lib.rs  manifest.rs  marketplace.rs  runtime.rs  sdk.rs
crates/ember-plugins/src/marketplace/: mod.rs  registry.rs  resolver.rs  types.rs
crates/ember-storage/: Cargo.toml
crates/ember-storage/src/: embeddings.rs  error.rs  lib.rs  memory.rs  rag.rs  semantic_cache.rs  sqlite.rs  vector.rs
crates/ember-telemetry/: Cargo.toml
crates/ember-telemetry/src/: anonymizer.rs  collector.rs  error.rs  events.rs  lib.rs  reporter.rs  storage.rs
crates/ember-tools/: Cargo.toml
crates/ember-tools/src/: api.rs  code_execution.rs  database.rs  error.rs  filesystem.rs  git.rs  glob.rs  grep.rs  image.rs  lib.rs  patch.rs  registry.rs  sdk.rs  shell.rs  structured_bash.rs  web.rs
crates/ember-voice/: Cargo.toml
crates/ember-voice/src/: commands.rs  lib.rs  session.rs  synthesizer.rs  transcriber.rs
crates/ember-web/: Cargo.toml
crates/ember-web/frontend/: package.json  playwright.config.ts
crates/ember-web/frontend/e2e/: app.spec.ts  visual.spec.ts
crates/ember-web/frontend/src/: App.tsx
crates/ember-web/frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  ConnectionStatus.tsx  Dashboard.tsx  ErrorBoundary.tsx  KeyboardShortcuts.tsx  PluginCard.tsx  PluginDetails.tsx  PluginMarketplace.tsx  ToolExecution.tsx
crates/ember-web/frontend/src/lib/: websocket.ts
crates/ember-web/frontend/src/store/: useStore.ts
crates/ember-web/src/: error.rs  handlers.rs  lib.rs  reconnection.rs  routes.rs  state.rs  websocket.rs
demo/: chat-tui.tape  init.tape  onboarding.tape  showcase.tape
deploy/helm/ember/: Chart.yaml  values.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml.example  service.yaml
deploy/terraform/aws/: main.tf  variables.tf
docs/: index.html
docs/src/: SUMMARY.md  custom-tools.md
docs/src/advanced/: index.md  memory-rag.md  plugin-development.md  streaming.md
docs/src/api/: index.md
docs/src/appendix/: troubleshooting.md
docs/src/deployment/: index.md
docs/src/developer/: index.md
docs/src/examples/: index.md
docs/src/guide/: context-management.md  performance.md  security.md  tool-selection.md
docs/src/providers/: bedrock.md
examples/: custom_tool.rs  error_handling.rs  web_server_integration.rs
plans/: ember-analyse.md  ember-improvements.md
tests/integration/: new_modules_tests.rs
(+2 files in other folders)
