[workspace]
resolver = "2"
members = [
    "crates/ember-core",
    "crates/ember-llm",
    "crates/ember-tools",
    "crates/ember-storage",
    "crates/ember-plugins",
    "crates/ember-mcp",
    "crates/ember-browser",
    "crates/ember-cli",
    "crates/ember-web",
    "crates/ember-desktop",
    "crates/ember-telemetry",
    "crates/ember-i18n",
    "crates/ember-benchmarks",
    "crates/ember-code",
    "crates/ember-learn",
    "crates/ember-voice",
    "crates/ember-enterprise",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ember-ai/ember"
homepage = "https://ember.dev"
documentation = "https://docs.ember.dev"
keywords = ["ai", "llm", "agent", "cli", "assistant"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Ember Contributors"]

[workspace.dependencies]
# Internal crates
ember-core = { path = "crates/ember-core" }
ember-llm = { path = "crates/ember-llm" }
ember-tools = { path = "crates/ember-tools" }
ember-storage = { path = "crates/ember-storage" }
ember-plugins = { path = "crates/ember-plugins" }
ember-mcp = { path = "crates/ember-mcp" }
ember-cli = { path = "crates/ember-cli" }
ember-web = { path = "crates/ember-web" }
ember-browser = { path = "crates/ember-browser" }
ember-desktop = { path = "crates/ember-desktop" }
ember-telemetry = { path = "crates/ember-telemetry" }
ember-i18n = { path = "crates/ember-i18n" }
ember-benchmarks = { path = "crates/ember-benchmarks" }
ember-code = { path = "crates/ember-code" }
ember-learn = { path = "crates/ember-learn" }
ember-voice = { path = "crates/ember-voice" }
ember-enterprise = { path = "crates/ember-enterprise" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Directory/Config paths
dirs = "5"

# Text processing
regex = "1"

# WASM runtime (for plugins)
wasmtime = "29"
wasmtime-wasi = "29"

# TUI (Terminal UI)
ratatui = "0.27"
crossterm = "0.27"

# Testing
mockall = "0.12"
wiremock = "0.6"
tempfile = "3"

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true

[profile.release]
# Optimized for size and speed
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-debug]
# Release with debug symbols (for profiling)
inherits = "release"
debug = true
strip = false
