[package]
name = "ember-benchmarks"
version = "1.1.0"
edition = "2021"
description = "Comprehensive benchmark suite for Ember AI Framework"
authors = ["Ember Team"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
ember-core = { path = "../ember-core" }
ember-llm = { path = "../ember-llm" }
ember-storage = { path = "../ember-storage" }
ember-tools = { path = "../ember-tools" }
ember-plugins = { path = "../ember-plugins" }

tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rand = "0.8"
tempfile = "3"
chrono = "0.4"
toml = "0.8"

[[bench]]
name = "core_benchmarks"
harness = false

[[bench]]
name = "storage_benchmarks"
harness = false

[[bench]]
name = "tools_benchmarks"
harness = false

[[bench]]
name = "full_suite"
harness = false