[package]
name = "ember-code"
version = "0.1.0"
edition = "2021"
description = "Lightweight code intelligence for Ember - regex-based code analysis, refactoring suggestions, and test generation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/niklasmarderx/Ember"
keywords = ["ai", "code-analysis", "refactoring", "code-generation"]
categories = ["development-tools", "text-processing"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Text processing
regex = "1.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# File globbing
glob = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
pretty_assertions = "1.4"