[package]
name = "ember-enterprise"
version = "0.1.0"
edition = "2021"
description = "Enterprise features for Ember: authentication, audit logging, RBAC, and team management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/niklasmarderx/Ember"
keywords = ["enterprise", "rbac", "audit", "team"]
categories = ["authentication", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"

# Async utilities
async-trait = "0.1"

# UUID for IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography for token hashing
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[features]
default = ["audit", "rbac", "teams"]
audit = []
rbac = []
teams = []