[package]
name = "ember-learn"
version = "0.1.0"
edition = "2021"
description = "Adaptive learning system for Ember AI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/niklasmarderx/Ember"
keywords = ["ai", "learning", "adaptive", "personalization"]
categories = ["development-tools"]

[dependencies]
# Core
ember-core = { path = "../ember-core" }
ember-storage = { path = "../ember-storage" }

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Machine Learning
ndarray = "0.15"

# Data structures
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"