[package]
name = "ember-llm"
description = "LLM provider abstraction layer for Ember"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["openai", "ollama"]
openai = []
anthropic = []
ollama = []
groq = []
gemini = []
mistral = []
deepseek = []
openrouter = []
xai = []
bedrock = ["dep:chrono"]
local = ["dep:llama-cpp-2"]
retry-provider = []
mock = []

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Regex for routing
regex = { workspace = true }

# Base64 encoding for vision
base64 = "0.22"

# Streaming utilities
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

# Local LLM (optional)
llama-cpp-2 = { version = "0.1", optional = true }

# AWS Bedrock support (optional)
chrono = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
mockall = { workspace = true }
wiremock = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "llm_benchmark"
harness = false
