[package]
name = "ember-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Model Context Protocol (MCP) implementation for Ember"
repository.workspace = true
keywords = ["mcp", "ai", "protocol", "tools"]
categories = ["development-tools"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Internal
ember-tools = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
