[package]
name = "ember-plugins"
version = "0.1.0"
edition = "2021"
description = "WASM plugin system for Ember AI agent framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ember-ai/ember"
keywords = ["ai", "agent", "wasm", "plugins", "extensible"]
categories = ["wasm"]

[features]
default = ["wasmtime"]
wasmtime = ["dep:wasmtime", "dep:wasmtime-wasi"]
marketplace = ["dep:reqwest", "dep:md5", "dep:chrono"]
hot-reload = ["dep:notify", "dep:chrono"]
full = ["wasmtime", "marketplace", "hot-reload"]

[dependencies]
# WASM runtime
wasmtime = { version = "19.0", optional = true }
wasmtime-wasi = { version = "19.0", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["sync", "fs"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Unique identifiers
uuid = { version = "1.0", features = ["v4"] }

# Logging
tracing = "0.1"

# HTTP client (marketplace feature)
reqwest = { version = "0.11", features = ["json"], optional = true }

# Checksum verification (marketplace feature)
md5 = { version = "0.7", optional = true }

# File watching (hot-reload feature)
notify = { version = "6.0", optional = true }

# Date/time handling
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
tokio = { version = "1.0", features = ["full", "test-util"] }
