[package]
name = "ember-plugins"
version = "1.0.0"
edition = "2021"
description = "WASM plugin system for Ember AI agent framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ember-ai/ember"
keywords = ["ai", "agent", "wasm", "plugins", "extensible"]
categories = ["wasm"]

[features]
default = ["wasmtime", "sdk"]
wasmtime = ["dep:wasmtime", "dep:wasmtime-wasi"]
marketplace = ["dep:reqwest", "dep:md5", "dep:chrono", "dep:sha2", "dep:dirs"]
hot-reload = ["dep:notify", "dep:chrono"]
sdk = ["dep:chrono"]
full = ["wasmtime", "marketplace", "hot-reload", "sdk"]

[dependencies]
# WASM runtime (uses workspace versions)
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["sync", "fs"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Unique identifiers
uuid = { version = "1.0", features = ["v4"] }

# Logging
tracing = "0.1"

# HTTP client (marketplace feature, uses workspace config with rustls-tls)
reqwest = { workspace = true, optional = true }

# Checksum verification (marketplace feature)
md5 = { version = "0.7", optional = true }
sha2 = { version = "0.10", optional = true }

# Directory paths (marketplace feature)
dirs = { version = "6.0", optional = true }

# File watching (hot-reload feature)
notify = { version = "6.0", optional = true }

# Date/time handling
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
tokio = { version = "1.0", features = ["full", "test-util"] }
