[package]
name = "ember-storage"
version = "1.0.0"
edition = "2021"
description = "Persistent storage for Ember AI agent framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ember-ai/ember"
keywords = ["ai", "agent", "storage", "sqlite", "vector"]
categories = ["database"]

[features]
default = ["sqlite"]
sqlite = ["rusqlite"]
vector = []
full = ["sqlite", "vector"]

[dependencies]
# Core storage
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["sync", "fs"] }
async-trait = "0.1"

# HTTP client (for Ollama embeddings)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
thiserror = "2.0"

# Unique identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Thread-safe locks
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-test = "0.4"
tempfile = "3.10"
