[package]
name = "ember-telemetry"
version = "0.1.0"
edition = "2021"
description = "Privacy-first, opt-in telemetry for Ember AI"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "time", "sync", "fs", "macros"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"], optional = true }
sha2 = "0.10"
directories = "5.0"
thiserror = "2.0"
tracing = "0.1"

[features]
default = []
remote = ["reqwest"]