[package]
name = "ember-tools"
version = "1.0.0"
edition = "2021"
description = "Built-in tools for Ember AI agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ember-ai/ember"
keywords = ["ai", "agent", "tools", "shell", "filesystem"]
categories = ["asynchronous", "filesystem"]

[dependencies]
# Internal crates
ember-llm = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["process", "fs", "io-util"] }

# Async combinators
futures = "0.3"

# Async trait support
async-trait = { workspace = true }

# HTTP client for web tools (uses workspace config with rustls-tls)
reqwest = { workspace = true, optional = true }

# Path handling
dirs = "6.0"
shellexpand = "3.1"

# Glob patterns
glob = "0.3"

# JSON Schema for tool definitions
schemars = "0.8"

# Regex for shell security patterns
regex = { workspace = true }

# SQLite for database tool
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

# URL parsing for API tool
url = { version = "2.5", optional = true }

# Base64 encoding for API authentication
base64 = { version = "0.22", optional = true }

[features]
default = ["shell", "filesystem", "web", "git", "code-execution", "database", "image", "api"]
shell = []
filesystem = []
web = ["reqwest"]
git = []
code-execution = ["tokio/io-util"]
database = ["rusqlite"]
image = []
api = ["web", "url", "base64"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3.10"