[package]
name = "ember-voice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Voice interface for Ember AI agent - speech-to-text and text-to-speech"
keywords = ["voice", "speech", "whisper", "tts", "hands-free"]
categories = ["multimedia::audio", "accessibility"]

[dependencies]
# Internal crates
ember-core = { workspace = true }
ember-llm = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros", "time"] }

# HTTP client for API calls
reqwest = { workspace = true, features = ["json", "multipart", "stream"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }

# Audio processing
rodio = "0.19"
cpal = "0.15"
hound = "3.5"

# Command parsing
regex = { workspace = true }

# UUID and time
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Base64 encoding
base64 = "0.22"

# Channels
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"

[features]
default = []
openai-whisper = []
openai-tts = []
local-whisper = []