[package]
name = "ember-web"
version = "1.0.0"
edition = "2021"
description = "Web server and API for Ember AI agent framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ember-ai/ember"
keywords = ["ai", "agent", "web", "api", "server"]
categories = ["web-programming"]

[features]
default = []
full = []

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# Internal dependencies
ember-core = { path = "../ember-core" }
ember-llm = { path = "../ember-llm" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# HTTP types
http = "1.0"

# Unique identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# WebSocket support
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Async streams
async-stream = "0.3"

# Template engine (optional)
askama = { version = "0.12", optional = true }

# Embedded static files
rust-embed = "8.5"
mime_guess = "2.0"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { workspace = true }
